[package]
name = "realtime_fft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.0"
ringbuf = "0.2.6"
realfft = "2.0.1"
rustfft = "6.0.1"
# Crates used for testing fft.
rand = "0.8.4"
approx = "0.5.0"
# Audio library
cpal = "0.13.4"

# Vulkan graphics libraries
vulkano = "0.27.1"
vulkano-shaders = "0.27.1"
# Windowing libraries
winit = "0.25.0"
vulkano-win = "0.27.1"
